homework6/oauthDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
       k8s-app: oauth2-proxy
       app.kubernetes.io/app-version: 26.1.4                                                                                                                                                                                                       
       app.kubernetes.io/component: keycloak                                                                                                                                                                                                       
       app.kubernetes.io/instance: nginx                                                                                                                                                                                                           
       app.kubernetes.io/managed-by: Helm                                                                                                                                                                                                          
       app.kubernetes.io/name: keycloak                                                                                                                                                                                                            
       app.kubernetes.io/version: 26.1.4                                                                                                                                                                                                           
                                                                                                                                                                                                 
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak-oidc
        - --client-id=vparking
        - --client-secret=QS3HIGxQqSHF3cL4XiylS9xZIDqZ1P1S
        #- --redirect-url=https://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/callback
        - --redirect-url=https://arch.homework/oauth2/callback
        - --oidc-issuer-url=http://keycloak.keycloak.svc.cluster.local/realms/vparking
        - --backend-logout-url=http://keycloak.keycloak.svc.cluster.local/realms/vparking//protocol/openid-connect/logout?id_token_hint={id_token}
        - --email-domain=*
        - --code-challenge-method=S256
        - --cookie-secret=ctqULBPoIvY1YuxAuUJGDg==
          #- --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --ssl-insecure-skip-verify=true

        - --silence-ping-logging=true
        - --reverse-proxy=true
        #- --cookie-domain=.homework,.cluster.local
        #-  --cookie-refresh=0
        - --set-xauthrequest=true
        - --set-authorization-header=true
        - --whitelist-domain=arch.homework,oauth2-proxy.oauth2-proxy.svc.cluster.local
#        env:
#        - name: OAUTH2_PROXY_CLIENT_ID
#          value: vparking
#        - name: OAUTH2_PROXY_CLIENT_SECRET
#          value: 9lrkn7w31TQQePckKvVo2C5N4TFlmvXx
#        - name: OAUTH2_PROXY_COOKIE_SECRET
#          value: ctqULBPoIvY1YuxAuUJGDg==
        image: quay.io/oauth2-proxy/oauth2-proxy@sha256:e01ded8323cc577440be301d8673cdd515367b8d9afe9eb23f61016a8c3e5f4e
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /ping
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
