homework6/oauthService2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
     app.kubernetes.io/component: keycloak                                                                                                                                                                                                       
     app.kubernetes.io/instance: nginx                                                                                                                                                                                                           
     app.kubernetes.io/managed-by: Helm                                                                                                                                                                                                          
     app.kubernetes.io/name: keycloak                                                                                                                                                                                                            
     app.kubernetes.io/version: 26.1.4    
     k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
