homework6/keycloak-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /admin/realms/vparking/users/$1
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - arch.homework
      secretName: nginx-ingress-nginx-admission
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /admin-keycloak/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 80
