homework6/keycloak-ingress-sign.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-auth
  namespace: test-auth
  labels:
    test-ingress: auth-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: "/realms/vparking/protocol/openid-connect/auth?client_id=vparking&scope=openid+email+profile&state=CE3E1035-601F-47A0-AB99-C7D7B8D17881&nonce=62C9F9EC-2A58-4885-950C-7A74E45238CF&response_type=code&redirect_uri=http://arch.homework/settings/health"
    nginx.ingress.kubernetes.io/rewrite-target: "/realms/vparking/protocol/openid-connect/auth"
spec:
  ingressClassName: nginx
  
  rules:
    - host: keycloak
      http: 
         paths:
           - backend:
               service:
                 name: test-auth-server
                 port:
                   number: 8080
             path: /sign
             pathType: Prefix
  tls: 
       - hosts: 
         - keycloak                                                                                               
         secretName: nginx-ingress-nginx-admission
