homework6/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
  namespace: kube-system
spec:
  tls:
    - hosts:
        - arch.homework
      secretName: nginx-ingress-nginx-admission
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /realms/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /resources/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /robots.txt
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /js/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
    - host: nginx-keycloak.kube-system.svc.cluster.local
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /realms/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /resources/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /robots.txt
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
          - path: /js/
            pathType: Prefix
            backend:
              service:
                name: nginx-keycloak
                port:
                  number: 80
