homework6/keycloak-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress2
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /realms/vparking/protocol/openid-connect/userinfo
spec:
  tls:
    - hosts:
        - keycloak
      secretName: nginx-ingress-nginx-admission
  ingressClassName: nginx
  rules:
    - host: keycloak
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
