homework6/oauthIngress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  - host: nginx-keycloak.kube-system.svc.cluster.local
    http:
      paths:
        - path: /oauth2
          pathType: Prefix
          backend:
            service:
              name: oauth2-proxy
              port:
                number: 4180
  tls:
    - hosts:
        - arch.homework
      secretName: nginx-ingress-nginx-admission
