homework6/oauthIngress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: external-auth-oauth2
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /dashboard    
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
