homework6/oauthIngress3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: designate-clusterissuer-prod
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, authorization"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
#  - host: oauth2-proxy.oauth2-proxy.svc.cluster.local
#    http:
#        paths:
#            - path: /
#              pathType: Prefix
#              backend:
#                service:
#                  name: oauth2-proxy
#                  port:
#                    number: 80
  tls:
    - hosts:
        - arch.homework
      secretName: nginx-ingress-nginx-admission
