homework6/networking.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      role: oauthProxy
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: nginx
    - podSelector:
       matchLabels:
          app.kubernetes.io/component: keycloak
          app.kubernetes.io/instance: nginx
  
  egress:
  - to:
      - podSelector:
         matchLabels:
            app.kubernetes.io/component: controller 
            app.kubernetes.io/instance: nginx    
      - podSelector:
          matchLabels:
              app.kubernetes.io/component: keycloak
              app.kubernetes.io/instance: nginx
